dataset1235/2025-2/2318198438/users/2190833977/executions/1897677159_4233865845.log
== SUBMISSION (2025-08-27 18:44:13)
-- CODE: 
#solicitação de dados
celcius = float(input())
#calculos
fahrenheit = (celcius * (9/5)) +32
#impressão
print(roud(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(fahrenheit, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(fahrenheit, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(fahrenheit, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(fahrenheit, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(fahrenheit, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(fahrenheit, 2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:46:07)
-- CODE: 
#solicitação de dados
celcius = float(input())
#calculos
fahrenheit = (celcius * (9/5)) +32
#impressão
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:44:51)
-- CODE: 
#solicitação de dados
celcius = float(input())
#calculos
fahrenheit = (celcius * (9/5)) +32
#impressão
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:44:49)
-- CODE: 
#solicitação de dados
celcius = float(input())
#calculos
fahrenheit = (celcius * (9/5)) +32
#impressão
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:45:35)
-- CODE: 
#solicitação de dados
celcius = float(input())
#calculos
fahrenheit = (celcius * (9/5)) +32
#impressão
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:46:05)
-- CODE: 
#solicitação de dados
celcius = float(input())
#calculos
fahrenheit = (celcius * (9/5)) +32
#impressão
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:45:39)
-- CODE: 
#solicitação de dados
celcius = float(input())
#calculos
fahrenheit = (celcius * (9/5)) +32
#impressão
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:45:48)
-- CODE: 
#solicitação de dados
celcius = float(input())
#calculos
fahrenheit = (celcius * (9/5)) +32
#impressão
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
